fix: fazendo correção na documentação de reservas com as rotas certas para GET, PUT e DELETE, alterando o campo lab para default:False no modelo e acrescentando novos tratamentos de erro. fazendo também alterações em gerenciamento para adequar os campos de turma ao novo modelo proposto no enunciado.
