# gerenciamento/src/models/models_turma.py
@@ -6,7 +6,7 @@ class Turma(banco_de_dados.Model):
     __tablename__ = 'turmas'
     # definindo as colunas de turma dentro da tabela
     id = banco_de_dados.Column(banco_de_dados.Integer, primary_key=True)
-    nome = banco_de_dados.Column(banco_de_dados.String(100), nullable=False)
+    descricao = banco_de_dados.Column(banco_de_dados.String(100), nullable=False)
     professor_id = banco_de_dados.Column(banco_de_dados.Integer, banco_de_dados.ForeignKey('professores.id'), nullable=False)
     ativo = banco_de_dados.Column(banco_de_dados.Boolean, default=True)
     
